--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-firebase/app": "^17.4.0",
+    "@react-native-firebase/auth": "^17.4.0",
+    "@react-native-firebase/database": "^17.4.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
+    "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
+    "expo-modules-autolinking": "1.5.0",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
