--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
     "expo-linear-gradient": "~12.3.0",
